fix alignment of pr logo in menu on clients page

--- a/themes/mzmc/assets/scss/_mzmc.scss
+++ b/themes/mzmc/assets/scss/_mzmc.scss
@@ -303,6 +303,7 @@
 .pr-logo-menu img {
     max-width: 100%;
     max-height: 30px;
+    transform: none !important;
 }
 
 .pr-logo-col {
